--- a/imports/ui/recommendation.html
+++ b/imports/ui/recommendation.html
@@ -1,6 +1,6 @@
 <template name="recommendation">
     <div class="list-group">
-        <a href="{{rec.url}}" target="_blank" class="list-group-item">
+        <a href="http://softwareengineering.stackexchange.com/questions/{{rec.id}}" target="_blank" class="list-group-item">
             <h4 class="list-group-item-heading">{{rec.title}}</h4>
             <p class="list-group-item-text">{{rec.score}}</p>
         </a>
